--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.5.0",
     "nanoid": "^4.0.2",
+    "notiflix": "^3.2.6",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-hot-toast": "^2.4.1",
     "react-redux": "^8.1.2",
+    "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
